...
          {isValidCode
            ? 'Le code est valide. L’offre peut être appliquée pour le client.'
            : 'Le code saisi est incorrect ou a déjà été utilisé.'}
        </Text>
      </View>

      <TouchableOpacity onPress={() => router.back()} testID="ContinueButton">
        <View className="items-center justify-center mb-20 w-[339px] h-[65px]  bg-[#0E3D60] rounded-[20px]">
          <Text className="font-bold text-[20px] text-white ">Continuer</Text>
        </View>
      </TouchableOpacity>
    </View>
  );
...
