appId: com.ronan.pdr.AgoraPulse
---
- assertVisible: "Connexion" # Vérifier que le titre "Connexion" est visible
- tapOn:
    id: "emailInput" # Active le champ email
- inputText:
    text: "Maestrotest@gmail.com"
    id: "emailInput"

- tapOn:
    id: "passwordInput" # Active le champ mot de passe
- inputText:
    text: "123123"
    id: "passwordInput"
- tapOn: "Se connecter"